--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "lodash": "^4.17.21",
     "nanoid": "^3.1.30",
     "prop-types": "^15.7.2",
+    "raven-js": "^3.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
